2011-08-17  Alejandro G. Castro  <alex@igalia.com>

        [GTK] Fix compilation problems with deprecations in gtk+
        https://bugs.webkit.org/show_bug.cgi?id=66073

        Reviewed by Martin Robinson.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (main): G_CONST_RETURN was deprecated
        * GtkLauncher/main.c:
        (createWindow): Added gtk_box_new conditional compilation for
        gtk+-3.
        * MiniBrowser/gtk/BrowserWindow.c:
        (browser_window_init): Replaced gtk_vbox_new with gtk_box_new, we
        are just supporting gtk+-3 for WebKit2.

2011-08-18  Anders Carlsson  <andersca@apple.com>

        Fix libc++ C++0x build
        https://bugs.webkit.org/show_bug.cgi?id=66479

        Reviewed by Adam Roben.

        Add missing includes.

        * DumpRenderTree/LayoutTestController.cpp:
        * DumpRenderTree/mac/CheckedMalloc.cpp:

2011-08-18  Adam Roben  <aroben@apple.com>

        Test that WebKit updates style when a WebView is moved between differently-scaled windows

        Test for <http://webkit.org/b/66412> <rdar://problem/9971958> WebKit doesn't react when a
        WebView is moved between windows with different backing scale factors

        Reviewed by Anders Carlsson.

        * TestWebKitAPI/JavaScriptTest.cpp:
        (TestWebKitAPI::runJSTest): Moved a little bit of code from here...
        (TestWebKitAPI::compareJSResult): ...to here. Also made the error message more similar to
        gtest's built-in error messages.

        * TestWebKitAPI/JavaScriptTest.h: Added overloads of runJSTest that take a WebView * and
        WKView * for convenience on Mac. Added compareJSResult helper function for implementing
        those overloads.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Added new files.

        * TestWebKitAPI/Tests/mac/DynamicDeviceScaleFactor.mm: Added.
        (-[FrameLoadDelegate initWithDidFinishLoadBoolean:]): Simple initializer.